--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,7 @@ jobs:
   - job: Windows
     timeoutInMinutes: 360
     pool:
-      vmImage: 'vs2017-win2016'
+      # vmImage: 'vs2017-win2016'
+      name: 'windows-pool'
     steps:
       - template: ci/build-windows.yml
