language: new package command for damlc
The (internal) package-new command reads all information from the
da.yaml file of a DAML project and also creates the .conf file for the
package database and packs it with the dar.

--- a/daml-foundations/daml-tools/da-hs-daml-cli/BUILD.bazel
+++ b/daml-foundations/daml-tools/da-hs-daml-cli/BUILD.bazel
@@ -38,6 +38,7 @@ da_haskell_library (
       "tasty-ant-xml",
       "tasty-hunit",
       "text",
+      "process",
       "vector",
       "xml",
       "yaml",
